--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,14 @@
 DirectorySlash Off
 Options -Indexes
 
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
+
+RewriteCond %{SERVER_PORT} 80
+RewriteCond %{REQUEST_URI} /
+RewriteRule ^(.*)$ https://inspirac.je/$1 [R,L]
+
 AddOutputFilterByType DEFLATE text/plain
 AddOutputFilterByType DEFLATE text/html
 AddOutputFilterByType DEFLATE text/xml
